# arceos-apps

./: .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.github/workflows/: build.yml  test.yml
c/helloworld/: axbuild.mk  features.txt
c/httpclient/: expect_info.out
c/httpserver/: httpserver.c
c/iperf/: README.md  features.txt
c/memtest/: expect_trace.out
c/pthread/basic/: expect_info_smp4_fifo.out
c/pthread/parallel/: expect_info_smp4_fifo.out  expect_info_smp4_rr.out  test_cmd
c/pthread/pipe/: expect_info_smp4_fifo.out
c/pthread/sleep/: expect_info_smp4_fifo.out
c/redis/: README.md  features.txt
c/sqlite3/: expect_info.out  expect_info_again.out  expect_info_ramdisk.out  features.txt
docs/: apps_display.md  apps_echoserver.md  apps_exception.md  apps_fs_shell.md  apps_helloworld.md  apps_httpclient.md  apps_httpserver.md  apps_memtest.md  apps_parallel.md  apps_priority.md  apps_sleep.md  apps_yield.md
rust/display/: Cargo.toml
rust/display/src/: main.rs
rust/exception/: Cargo.toml  expect_debug_aarch64.out  expect_debug_riscv64.out  expect_debug_x86_64.out
rust/exception/src/: main.rs
rust/fs/shell/: Cargo.toml
rust/fs/shell/src/: cmd.rs  main.rs
rust/helloworld/: Cargo.toml
rust/helloworld/src/: main.rs
rust/memtest/: Cargo.toml  expect_trace.out
rust/memtest/src/: main.rs
rust/net/bwbench/: Cargo.toml
rust/net/bwbench/src/: main.rs
rust/net/echoserver/: Cargo.toml
rust/net/echoserver/src/: main.rs
rust/net/httpclient/: Cargo.toml  expect_info.out  expect_info_dns.out
rust/net/httpclient/src/: main.rs
rust/net/httpserver/: Cargo.toml
rust/net/httpserver/src/: main.rs
rust/net/udpserver/: Cargo.toml
rust/net/udpserver/src/: main.rs
rust/task/affinity/: Cargo.toml  expect_info_smp4_cfs.out  expect_info_smp4_fifo.out  expect_info_smp4_rr.out  test_cmd
rust/task/affinity/src/: main.rs
rust/task/irq/: Cargo.toml  expect_info_smp1_fifo.out  expect_info_smp4_fifo.out  test_cmd
rust/task/irq/src/: irq.rs  main.rs
rust/task/parallel/: Cargo.toml  test_cmd
rust/task/parallel/src/: main.rs
rust/task/priority/: Cargo.toml  test_cmd
rust/task/priority/src/: main.rs
rust/task/sleep/: Cargo.toml  test_cmd
rust/task/sleep/src/: main.rs
rust/task/sync/: Cargo.toml  expect_info_smp1_fifo.out  expect_info_smp4_cfs.out  expect_info_smp4_fifo.out  expect_info_smp4_rr.out  test_cmd
rust/task/sync/src/: barrier.rs  condvar.rs  main.rs  mutex.rs  rwlock.rs  semaphore.rs
rust/task/tls/: Cargo.toml  test_cmd
rust/task/tls/src/: main.rs
rust/task/wait_queue/: Cargo.toml  expect_info_smp1_fifo.out  expect_info_smp4_cfs.out  expect_info_smp4_fifo.out  expect_info_smp4_rr.out  test_cmd
rust/task/wait_queue/src/: main.rs
rust/task/yield/: Cargo.toml  test_cmd
rust/task/yield/src/: main.rs
scripts/: app_test.sh  config.toml.temp  get_deps.sh  set_ax_root.sh  setup.sh
