[workspace]
resolver = "2"

members = [
    "rust/helloworld",
    "rust/memtest",
    "rust/exception",
    "rust/display",
    "rust/fs/shell",
    "rust/net/echoserver",
    "rust/net/httpclient",
    "rust/net/httpserver",
    "rust/net/udpserver",
    "rust/net/bwbench",
    "rust/task/parallel",
    "rust/task/sleep",
    "rust/task/yield",
    "rust/task/priority",
    "rust/task/tls",
]
exclude = [".arceos"]

[workspace.dependencies]
axstd = { git = "https://github.com/arceos-org/arceos.git" }

[patch.crates-io]
# todo: update to new version of `memory_addr` on `crates.io` once it get released
memory_addr = { git = "https://github.com/arceos-org/memory_addr.git", rev = "46c06e5" }
page_table_entry = { git = "https://github.com/arceos-org/page_table_multiarch.git", rev = "feb4aa3" }
page_table_multiarch = { git = "https://github.com/arceos-org/page_table_multiarch.git", rev = "feb4aa3" }
