[package]
name = "arceos-exception"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
axstd = ["linkme", "dep:axstd"]

[dependencies]
axstd = { workspace = true, optional = true, features = ["paging"] }
linkme = { version = "0.3", optional = true }
