[package]
name = "affinity"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <keyang.hu@qq.com>"]
description = "A simple demo to test the cpu affinity of tasks under ArceOS"

[features]
sched_rr = ["axstd?/sched_rr"]
sched_cfs = ["axstd?/sched_cfs"]

[dependencies]
axstd = { workspace = true, features = ["multitask"], optional = true }
