[package]
name = "affinity"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <keyang.hu@qq.com>"]
description = "A simple demo to test the cpu affinity of tasks under ArceOS"

[features]
sched-rr = ["axstd?/sched-rr"]
sched-cfs = ["axstd?/sched-cfs"]

[dependencies]
axstd = { workspace = true, features = ["multitask"], optional = true }
