[package]
name = "arceos-priority"
version = "0.1.0"
edition = "2021"
authors = ["Haoxing Ye <yehx20@mails.tsinghua.edu.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sched-rr = ["axstd?/sched-rr"]
sched-cfs = ["axstd?/sched-cfs"]

[dependencies]
axstd = { workspace = true, features = ["alloc", "multitask"], optional = true }
