[package]
name = "arceos-sync"
version = "0.1.0"
edition = "2021"
authors = ["Keyang Hu <keyang.hu@qq.com>"]
description = "A simple demo to test the task synchronization mechanisms provided by ArceOS"

[features]
sched_rr = ["axstd?/sched_rr"]
sched_cfs = ["axstd?/sched_cfs"]

[dependencies]
axstd = { workspace = true, features = ["alloc", "multitask", "irq"], optional = true }

rand = { version = "0.8", default-features = false, features = ["small_rng"] }