[package]
name = "arceos-yield"
version = "0.1.0"
edition = "2021"
authors = ["Yuekai Jia <equation618@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
sched-rr = ["axstd?/sched-rr"]
sched-cfs = ["axstd?/sched-cfs"]

[dependencies]
axstd = { workspace = true, features = ["multitask"], optional = true }
